@startuml der

skinparam linetype ortho

' ─── usuarios y roles ───

entity Rol {
  * id_rol : int (PK)
  --
  * nombre : varchar(50)
}

entity Usuario {
  * id_usuario : int (PK)
  --
  nombre : varchar
  apellido : varchar
  dni : varchar
  mail : varchar
  contrasena : varchar
  estado : enum
  id_rol : int (FK)
}

' ─── carreras y materias ───

entity Carrera {
  * id_carrera : int (PK)
  --
  nombre : varchar
}

entity Materia {
  * id_materia : int (PK)
  --
  nombre : varchar
  id_carrera : int (FK)
}

' ─── aula y eventos ───

entity Aula {
  * id_aula : int (PK)
  --
  nombre : varchar
  capacidad : int
  piso : int
  ubicacion : varchar
}

entity TipoEvento {
  * id_tipo_evento : int (PK)
  --
  nombre : varchar(50)
}

entity Evento {
  * id_evento : int (PK)
  --
  titulo : varchar
  fecha : date
  horaInicio : time
  horaFin : time
  estado : varchar
  id_aula : int (FK)
  id_tipo_evento : int (FK)
  id_materia : int (FK)
}

' ─── inscripciones ───

entity Inscripcion {
  * id_inscripcion : int (PK)
  --
  id_usuario : int (FK)
  id_materia : int (FK)
}

' ─── avisos ───

entity Aviso {
  * id_aviso : int (PK)
  --
  mensaje : varchar
  fecha_creacion : datetime
  id_usuario_creador : int (FK)
  id_evento : int (FK)
}

' ─── notificaciones ───

entity Notificacion {
  * id_notificacion : int (PK)
  --
  id_usuario : int (FK)
  id_evento : int (FK)
  mensaje : varchar
  leida : boolean
  fecha_creacion : datetime
}

' ─── relaciones ───

Rol ||--o{ Usuario : tiene
Carrera ||--o{ Materia : contiene
Usuario ||--o{ Inscripcion : está asignado
Materia ||--o{ Inscripcion : posee
Aula ||--o{ Evento : asigna
TipoEvento ||--o{ Evento : clasifica
Materia ||--o{ Evento : pertenece
Evento ||--o{ Aviso : contiene
Usuario ||--o{ Aviso : crea
Usuario ||--o{ Notificacion : recibe
Evento ||--o{ Notificacion : genera

@enduml